--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "build": "webpack --config webpack.config.production.js",
     "start": "webpack-dev-server",
-    "test": "mocha --watch --compilers js:babel-core/register --recursive tests/"
+    "lint": "standard \"src/**/*.js\"",
+    "pretest": "npm run lint",
+    "test": "mocha --compilers js:babel-core/register --recursive tests/"
+  },
+  "standard": {
+    "globals": [
+      "describe",
+      "it"
+    ]
   },
   "author": "George Michael",
   "license": "ISC",
@@ -16,6 +24,8 @@
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
     "html-webpack-plugin": "^2.30.1",
+    "mocha": "^4.1.0",
+    "standard": "^10.0.3",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.2"
   }
